[REFACTOR] Improve code by removing code smells