@@ -5,6 +5,7 @@ import id.ac.ui.cs.advprog.everest.modules.paymentmethod.dto.CreateAndUpdatePaym
 import id.ac.ui.cs.advprog.everest.modules.paymentmethod.dto.PaymentMethodDetailDto;
 import id.ac.ui.cs.advprog.everest.modules.paymentmethod.dto.PaymentMethodSummaryDto;
 import id.ac.ui.cs.advprog.everest.modules.paymentmethod.model.PaymentMethod;
+import id.ac.ui.cs.advprog.everest.modules.paymentmethod.model.enums.PaymentType;
 import id.ac.ui.cs.advprog.everest.modules.paymentmethod.repository.PaymentMethodRepository;
 import org.springframework.dao.DataAccessException;
 import org.springframework.stereotype.Service;
@@ -17,6 +18,7 @@ import java.util.stream.Collectors;
 @Service
 public class PaymentMethodServiceImpl implements PaymentMethodService {
 
+    private static final String NOT_FOUND_MESSAGE = "Payment method not found";
     private final PaymentMethodRepository repository;
 
     public PaymentMethodServiceImpl(PaymentMethodRepository repository) {
@@ -25,46 +27,39 @@ public class PaymentMethodServiceImpl implements PaymentMethodService {
 
     @Override
     public GenericResponse<PaymentMethodDetailDto> readDetails(UUID id) {
-        try {
+        return handle(() -> {
             PaymentMethod method = repository.findById(id)
-                    .orElseThrow(() -> new NoSuchElementException("Payment method not found"));
-
+                    .orElseThrow(() -> new NoSuchElementException(NOT_FOUND_MESSAGE));
             return new GenericResponse<>(true, "Payment method retrieved successfully", toDetailDto(method));
-        } catch (NoSuchElementException | DataAccessException e) {
-            return new GenericResponse<>(false, e.getMessage(), null);
-        }
+        });
     }
 
     @Override
     public GenericResponse<List<PaymentMethodSummaryDto>> getAllPaymentMethods() {
-        try {
+        return handle(() -> {
             List<PaymentMethod> methods = repository.findAll();
             List<PaymentMethodSummaryDto> dtoList = methods.stream()
                     .map(this::toSummaryDto)
-                    .collect(Collectors.toList());
+                    .toList();
             return new GenericResponse<>(true, "Payment methods retrieved successfully", dtoList);
-        } catch (DataAccessException e) {
-            return new GenericResponse<>(false, "Failed to retrieve payment methods", null);
-        }
+        });
     }
 
     @Override
     public GenericResponse<PaymentMethodDetailDto> create(CreateAndUpdatePaymentMethodRequest request) {
-        try {
+        return handle(() -> {
             PaymentMethod method = fromRequest(request);
             validate(method);
             PaymentMethod saved = repository.save(method);
             return new GenericResponse<>(true, "Payment method created successfully", toDetailDto(saved));
-        } catch (IllegalArgumentException | DataAccessException e) {
-            return new GenericResponse<>(false, e.getMessage(), null);
-        }
+        });
     }
 
     @Override
     public GenericResponse<PaymentMethodDetailDto> update(UUID id, CreateAndUpdatePaymentMethodRequest request) {
-        try {
+        return handle(() -> {
             PaymentMethod existing = repository.findById(id)
-                    .orElseThrow(() -> new NoSuchElementException("Payment method not found"));
+                    .orElseThrow(() -> new NoSuchElementException(NOT_FOUND_MESSAGE));
 
             existing.setName(request.getName());
             existing.setType(request.getType());
@@ -75,19 +70,18 @@ public class PaymentMethodServiceImpl implements PaymentMethodService {
             validate(existing);
             PaymentMethod updated = repository.save(existing);
             return new GenericResponse<>(true, "Payment method updated successfully", toDetailDto(updated));
-        } catch (IllegalArgumentException | NoSuchElementException | DataAccessException e) {
-            return new GenericResponse<>(false, e.getMessage(), null);
-        }
+        });
     }
 
     @Override
     public GenericResponse<Void> delete(UUID id) {
-        try {
+        return handle(() -> {
+            if (!repository.existsById(id)) {
+                throw new NoSuchElementException(NOT_FOUND_MESSAGE);
+            }
             repository.deleteById(id);
             return new GenericResponse<>(true, "Payment method deleted successfully", null);
-        } catch (DataAccessException e) {
-            return new GenericResponse<>(false, "Failed to delete payment method", null);
-        }
+        });
     }
 
     private void validate(PaymentMethod method) {
@@ -98,17 +92,14 @@ public class PaymentMethodServiceImpl implements PaymentMethodService {
         }
 
         int length = method.getAccountNumber().length();
-        switch (method.getType()) {
-            case BANK_TRANSFER -> {
-                if (length < 10 || length > 16) {
-                    throw new IllegalArgumentException("Bank account number must be 10–16 digits");
-                }
-            }
-            case E_WALLET -> {
-                if (length < 10 || length > 23) {
-                    throw new IllegalArgumentException("Virtual account number must be 10–23 digits");
-                }
-            }
+        PaymentType type = method.getType();
+
+        if (type == PaymentType.BANK_TRANSFER && (length < 10 || length > 16)) {
+            throw new IllegalArgumentException("Bank account number must be 10–16 digits");
+        }
+
+        if (type == PaymentType.E_WALLET && (length < 10 || length > 23)) {
+            throw new IllegalArgumentException("Virtual account number must be 10–23 digits");
         }
     }
 
@@ -144,5 +135,21 @@ public class PaymentMethodServiceImpl implements PaymentMethodService {
                 .build();
     }
 
+    /**
+     * Common wrapper to handle exceptions and reduce repetitive try-catch blocks.
+     */
+    private <T> GenericResponse<T> handle(ServiceLogic<T> logic) {
+        try {
+            return logic.execute();
+        } catch (IllegalArgumentException | NoSuchElementException e) {
+            return new GenericResponse<>(false, e.getMessage(), null);
+        } catch (DataAccessException e) {
+            return new GenericResponse<>(false, "Database error: " + e.getMessage(), null);
+        }
+    }
 
+    @FunctionalInterface
+    private interface ServiceLogic<T> {
+        GenericResponse<T> execute();
+    }
 }
